--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:roundIcon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".presentation.ExmoFinanceHelperApplication"
         android:theme="@style/AppTheme">
 
         <activity android:name=".presentation.screen.RootActivity">
