--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         kotlin_version = '1.3.60-eap-25'
         moxyVersion = '1.0.13'
         kotlinCoroutineVersion = "1.3.2"
+        roomVersion = "2.2.5"
     }
     repositories {
         google()
