--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    implementation project(":apierrorhandler")
+
     // Moxy
     implementation "com.github.moxy-community:moxy:$moxyVersion"
     implementation "com.github.moxy-community:moxy-androidx:$moxyVersion"
