--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         kotlinCoroutineVersion = "1.3.2"
         navigationVersion = "1.0.0"
-        kotlin_version = '1.3.60-eap-25'
+        kotlin_version = '1.3.61'
         moxyVersion = '1.0.13'
         kotlinCoroutineVersion = "1.3.2"
         roomVersion = "2.2.5"
@@ -15,8 +15,9 @@ buildscript {
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0-beta04'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.0.0-beta05'
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.70"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
